--- a/LibraryApi/appsettings.json
+++ b/LibraryApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "SERVER=10.30.1.45;Database=postgres;User name=postgres;Password=postgres"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
